--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,4 @@ clap = { version = "4.5.23", features = ["derive"] }
 hex = "0.4.3"
 serde = { version = "1.0", features = ["derive"]}
 serde_json = "1.0.134"
+sha2 = "0.10.8"
